--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "deploy": "d2-app-scripts deploy"
   },
   "devDependencies": {
-    "@dhis2/cli-app-scripts": "^10.4.0-alpha.5"
+    "@dhis2/cli-app-scripts": "^11.4.1"
   },
   "dependencies": {
-    "@dhis2/app-runtime": "^3.10.0-alpha.6"
+    "@dhis2/app-runtime": "^3.10.4",
+    "global": "^4.4.0"
   },
   "resolutions": {
     "@dhis2/app-runtime": "^3.10.0-alpha.6"
